tests/types/errors/missing_map_key.mochi
type Point { x: int, y: int }
let pts: map<string, Point> = {"o": Point{x: 0, y: 0}}
let p: Point = pts["missing"]
